images/k8s_app_deploy/ocr-deploy/app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ashuwebapp
  name: ashuwebapp # name of deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ashuwebapp
  strategy: {}
  template: # for pod creation 
    metadata:
      creationTimestamp: null
      labels:
        app: ashuwebapp
    spec:
      imagePullSecrets: # calling secret to pull image 
      - name: ashuapp-sec # name of secret used by kubelet on minion side 
      containers:
      - image: phx.ocir.io/axmbtg8judkl/ashucustomer:v2
        name: ashucustomer
        ports:
        - containerPort: 80
        env: # calling / using env data 
        - name: deploy # from dockerfile name of env 
          valueFrom: # reading value from somewhere 
            configMapKeyRef:
              name: ashucm # name of configmap 
              key: key1 # key of cm 
        resources: # limiting vertical scaling in PODs
          requests:
            cpu: 100m # 1vcpu == 1000 milicore 
            memory: 200M
          limits: 
            cpu: 300m
            memory: 500M 
        readinessProbe: # will be used by k8s kubelet for health 
          httpGet:
            path: /health.html
            port: 80
          initialDelaySeconds: 2 
          periodSeconds: 10  
        livenessProbe: # will be used by k8s kubelet for health 
          httpGet:
            path: /health.html
            port: 80
          initialDelaySeconds: 2 
          periodSeconds: 10

status: {}
