images/k8s_app_deploy/ocr-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-app-routing-rule # name of rule 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # nginx ingress 
  rules:
  - host: www.ashu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ashu-local-lb
            port:
              number: 80
